tests/fixtures/invalid/pow_set_str_int.py
# Cannot call pow() with Set[int], Str, Int
x = pow({1, 2, 3}, "hello", 1)
